**  denotes quite substantial/important changes
*** denotes really big changes 

ISSUES:

1.6-3

** `t2' alternative tensor product smooths added. These can be used with 
  gamm4. 

** "mrf" smooth class added (at the suggestion of Thomas Kneib). 
   Implements smoothing over discrete geographic districts using a
   Markov random field penalty. See ?mrf

* Plot method added for mrf smooths. 

* `concurvity' function added to provide simple concurvity measures.

* `plot.gam' restructured so that smooths are plotted by smooth specific
  plot methods.

* Plot method added for "random.effect" smooth class.

* `pen.edf' function added to extract EDF associated with each penalty.
   Useful with t2 smooths. 

* Facilty provided to allow different identifiability constraints to be
  used for fitting and prediction. This allows t2 smooths to be fitted
  with a constraint that allows fitting by gamm4, but still perform 
  inference with the componentwise optimal sum to zero constraints.

* mgcv-FAQ.Rd added.

* qq.gam added to allow better checking of distribution of residuals.

* gam.check modified to use qq.gam for QQ plots of deviance residuals.
  Also, it now works with gam(*, na.action = "na.replace") and NAs.

* paraPen works properly with `gam.vcomp' and full.sp names returned 
  correctly.

* bam (and bam.update) can now employ an AR1 error model in the 
  guassian-identity case. 

* bam.update modified for faster updates (initial scale parameter 
  estimate now supplied in RE/ML case)

* Absorption of identifiability constraints modified to allow 
  constraints that only affect some parameters to leave rest of 
  parameters completely unchanged.  

* rTweedie added for quick simulation of Tweedie random deviates 
  when 1<p<2.

* smooth.terms help file fixed so cyclic p spline identifies as "cp"
  and not "cs"!

* bug fix in `gamm' so that binomial response can be provided as 2 column 
  matrix, in standard `glm' way.

1.6-2
