@@ -8,7 +8,7 @@ export(anova.gam, bam, bam.update, concurvity, cSplineDes,
        gam2objective,
        gamm, gam.check, gam.control,gam.fit3,
        gam.fit, gam.outer,gam.vcomp, gamSim , influence.gam, 
-       interpret.gam, 
+       in.out,interpret.gam, 
        gam.side,
        get.var,ldTweedie,
        initial.sp,logLik.gam,ls.size,
