@@ -30,6 +30,7 @@ R_CMethodDef CEntries[] = {
     {"mgcv_tri_diag",(DL_FUNC)&mgcv_tri_diag,3},
     {"mgcv_td_qy",(DL_FUNC)&mgcv_td_qy,7},
     {"rwMatrix",(DL_FUNC)&rwMatrix,6},
+    {"in_out",(DL_FUNC)&in_out,8},
     {NULL, NULL, 0}
 };
 
